--- a/samasys/src/App.css
+++ b/samasys/src/App.css
@@ -262,8 +262,8 @@ h3{
   height: 100%;
 }
 .loan-details{
-  padding: 0 2rem;
-  width: 70%;
+  padding: 0 1rem;
+  width: auto;
 }
 .detail{
   display: flex;
@@ -308,5 +308,13 @@ h3{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+  }
+  .loan-date{
+    width: 30%;
+    height: 100%;
+  }
+  .loan-details{
+    padding: 0 2rem;
+    /*width: 70%;*/
   }
 } 
